--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,16 +23,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".movieDetail"
-            android:label="@string/title_activity_movie_detail"
-            android:theme="@style/AppTheme.NoActionBar" />
+
         <activity
             android:name=".Settings"
             android:label="@string/title_activity_settings"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Favourates" />
-        <activity android:name=".FavourateDetail"></activity>
+        <activity android:name=".FavourateDetail" />
+        <activity android:name=".Details" />
+
     </application>
 
 </manifest>
